[gd_scene load_steps=6 format=3 uid="uid://dvqlaq6opiv00"]

[ext_resource type="Script" path="res://Events/narrative_event.gd" id="1_pi477"]
[ext_resource type="Texture2D" uid="uid://djmrox3cqnntc" path="res://icon.svg" id="2_ch3bu"]
[ext_resource type="PackedScene" uid="uid://cgeo8n0mg0x68" path="res://Battle/player/player_stats_ui.tscn" id="3_66jnm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0iepr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckr0t"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="NarrativeEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pi477")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="Panel" type="Panel" parent="Background"]
custom_minimum_size = Vector2(900, 440)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -284.0
offset_right = 450.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -174.5
offset_right = 300.0
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="ResultsLabel" type="Label" parent="Background/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "  RESULTS  "

[node name="Panel" type="Panel" parent="Background/Panel/VBoxContainer/ResultsLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0iepr")

[node name="Panel" type="Panel" parent="Background/Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ckr0t")

[node name="NarrativeHBoxContainer" type="HBoxContainer" parent="Background/Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ImagePanel" type="Panel" parent="Background/Panel/VBoxContainer/Panel/NarrativeHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NarrativeImage" type="TextureRect" parent="Background/Panel/VBoxContainer/Panel/NarrativeHBoxContainer/ImagePanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("2_ch3bu")

[node name="NarrativePanel" type="Panel" parent="Background/Panel/VBoxContainer/Panel/NarrativeHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="NarrativeLabel" type="Label" parent="Background/Panel/VBoxContainer/Panel/NarrativeHBoxContainer/NarrativePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Este texto deberÃ­a haber sido reemplazado."
horizontal_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="Background/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 20
text = "CONTINUE  ->"

[node name="PlayerStatsUI" parent="." instance=ExtResource("3_66jnm")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 648.0
offset_right = 900.0
offset_bottom = 648.0
grow_horizontal = 1
grow_vertical = 0

[connection signal="pressed" from="Background/Panel/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
